fixed width on small screens

--- a/style.css
+++ b/style.css
@@ -122,27 +122,29 @@ h3 {
   font-size: 24px;
 }
 
-
-@media only screen and (max-width: 768px) { 
+@media only screen and (max-width: 768px) {
+  body {
+    padding: 50px 10px;
+  }
+ 
   .single-item {
     flex-direction: column;
-	justify-content: space-between;
+    justify-content: space-between;
   }
 
   .actions {
-	  margin-top: 10px;
+    margin-top: 10px;
   }
   .single-item .si-content {
-	padding-left: 0px;
-	padding-top: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
   }
   .cart {
-	  background-size: 100px;
+    background-size: 100px;
   }
 
   .cart-single-item {
-	  flex-direction: column;
-	  /* padding: 10px; */
-	  align-items: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
